Fix username input row height when zoomed in on narrow screen

--- a/ideagarden/src/css/general.css
+++ b/ideagarden/src/css/general.css
@@ -9,6 +9,7 @@
 .input-button-row > input,
 .input-button-row > .input {
   flex: 1;
+  min-width: 25%;
 }
 
 input, .input,
